objects/AR_JE_Failure__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>ccrz__E_Invoice__c</referenceTo>
        <relationshipLabel>AR JE Failures</relationshipLabel>
        <relationshipName>AR_JE_Failures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>AR JE Failures</relationshipLabel>
        <relationshipName>AR_JE_Failures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AR Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>JE Invoice</fullName>
                </value>
                <value>
                    <fullName>JE Reversal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AR JE Failure</label>
    <nameField>
        <displayFormat>ARJE-{000000}</displayFormat>
        <label>AR JE Failure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR JE Failures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>